chore: suppressed boilerplate logging from docker, server and console
Fixed issue #908